Layout fixes adapted of my self-project

--- a/app/views/apipie/apipies/_errors.html.erb
+++ b/app/views/apipie/apipies/_errors.html.erb
@@ -3,9 +3,9 @@
 <table class="table table-bordered">
 	<thead>
 		<tr>
-			<th><%= t('apipie.error_code', default: 'Code') %></th>
-			<th><%= t('apipie.error_description', default: [:description, 'Description']) %></th>
-			<% if show_metadata %><th><%= t('apipie.error_metadata', default: [:metadata, 'Metadata']) %></th><% end %>
+			<th><%= t('apipie.error_code', default: 'Código') %></th>
+			<th><%= t('apipie.error_description', default: [:description, 'Descrição']) %></th>
+			<% if show_metadata %><th><%= t('apipie.error_metadata', default: [:metadata, 'Metadados']) %></th><% end %>
 		</tr>
 	</thead>
 
